# Onset-detection

./: CMakeLists.txt  README.md
config/: temp11adj0718.txt  temp11new.txt  template11025.txt  template44100.txt  window4096_1024.txt
include/: Evaluate.h  Onsets.h  SpectralODF.h  Timer.h  _kiss_fft_guts.h  kiss_fft.h  resample.h  tool.h  upfirdn.h
pythontool/: SplitMp3.py  onset_detection.py
src/: Evaluate.cpp  Onsets.cpp  SpectralODF.cpp  kiss_fft.cpp  main.cpp  resample.cpp  tool.cpp
